--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <li>Fair play and integrity are expected from all participants throughout the competition.</li>
                 <li>Organizers reserve the right to disqualify any team found violating the rules or engaging in any form of misconduct.</li>
                 <li>All decisions made by the organizing committee regarding the event and its outcomes are final.</li>
-                <h3>Date: 29.04.24 | Time: 9.30 am</h3>
+                <h3>Date: 26.04.24 | Time: 9.30 am</h3>
                 <h3>Venue: C303</h3>
                 <h3>Student Coordinators:</h3>
                 <p>Sathyasri.S - 9025504556</p>
@@ -203,19 +203,57 @@
             <img src="machine-learning.jpg" alt="Machine Learning model">
             <p class="description">Learn about the latest trends in machine learning models. <a href="#" class="read-more">Read more</a></p>
             <div class="expanded-description">
-
+                <h3>Event Details:</h3>
+                <ul>
+                    <li>Team Size: 1-3 members</li>
+                    <li>Working Model: Compulsory</li>
+                    <li>Event Start Time: 2:00 PM</li>
+                    <li>Number of Rounds: 2</li>
+                    <li>Dataset Type: CSV</li>
+                    <li>Rounds Description: CSV type based datasets will be provided for the rounds.</li>
+                    <li>Round 1: Teams will be shortlisted based on their initial model submission and evaluation.</li>
+                    <li>Round 2: Shortlisted teams will participate in advanced challenges and evaluation criteria including F1 Score, Mean Squared Error (MSE), and Accuracy of their models.</li>
+                    <li>Winners Selection: The winners will be chosen based on the performance metrics from Round 2.</li>
+                </ul>
+                <h3>Additional Information:</h3>
+                <ul>
+                    <li>Participants must adhere to the event rules and guidelines provided by the organizers.</li>
+                    <li>Fair play and integrity are expected from all participants throughout the competition.</li>
+                    <li>Organizers reserve the right to disqualify any team found violating the rules or engaging in any form of misconduct.</li>
+                    <li>All decisions made by the organizing committee regarding the event and its outcomes are final.</li>
+                    <li>Date: 29.04.24 | Time: 2:00 PM</li>
+                    <li>Venue: [Insert Venue Details]</li>
+                    <li>Student Coordinators:</li>
+                    <p>Guru Dharsan - 6381474594</p>
+                    <p>Tharun Kumar - 9994893511</p>
+                </ul>
             </div>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSckXHj6loaNE7xj-KwKv-8HScSLBUJCsBPSIEteIFR5_-oWTg/viewform?pli=1" class="register-btn">Register</a>
         </div>
         <div class="event">
-            <h2>Cybersecurity Symposium</h2>
+            <h2>Encrypt Expo</h2>
             <img src="cybersecurity.jpg" alt="Cybersecurity Symposium">
-            <p class="description">Explore the world of cybersecurity and network security. <a href="#" class="read-more">Read more</a></p>
+            <p class="description">Explore the world of encryption, cybersecurity, and network security.</p>
             <div class="expanded-description">
-    
+                <h3>Event Details:</h3>
+                <ul>
+                    <li>Team Size: Maximum of 3 members per team.</li>
+                    <li>Number of Rounds: 2</li>
+                    <li>Event Timing: 2:00 PM</li>
+                    <li>10 Teams will be shortlisted to Round 2.</li>
+                    <li>Winners will be announced based on a first-come basis.</li>
+                </ul>
+                <h4>Round 1: Cyber Net Quiz</h4>
+                <p>Quiz based on cybersecurity and networking concepts.</p>
+                <h4>Round 2: Capture the Flag</h4>
+                <p>A box will be given to teams, containing 3-5 tasks. Each task contains a flag that must be captured.</p>
+                <h3>Date: 29.04.24 | Time: 2:00 PM</h3>
+                <h3>Student Coordinators:</h3>
+                <p>Dineshkumar.R - 9345876850</p>
+                <p>Harishini.P - 9025673394</p>
             </div>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdg8yJpZz5KxwvJ42ngl3ZMJ3UV8cPqFk470iZChlP_btlQ_Q/viewform?usp=sf_link" class="register-btn">Register</a>
-        </div>
+        </div>        
         <div class="event">
             <h2>INNOVATIVE SHOWCASE(Project Expo)</h2>
             <img src="project-expo.jpg" alt="Project Expo">
@@ -232,7 +270,8 @@
                     <li>Mail your PPT to clarentzmcet@gmail.com before 24/4/2024</li>
                     <li>Based on the idea, the teams will be shortlisted for presentation.</li>
                 </ul>
-                <h3>Date: 29.04.24 | Time: 9.30 am</h3>
+                <h3>Date: 26.04.24 | Time: 9.30 am</h3>
+                <h3>Venue: C303</h3>
                 <h3>Student Coordinators:</h3>
                 <p>Krishika.R - 9385726369</p>
                 <p>Mohammed Yunus.S - 9677774097</p>
