--- a/index.html
+++ b/index.html
@@ -174,27 +174,29 @@
             <p class="description">Join our coding competition and showcase your programming skills. <a href="#" class="read-more">Read more</a></p>
             <div class="expanded-description">
                 <h4>Round 1:</h4>
-            <ul>
-                <li>Format: Multiple Choice Questions (MCQs) and Debugging</li>
-                <li>Description: In this round, participants will face a series of MCQs testing their conceptual understanding of programming languages, algorithms, and data structures. Additionally, there will be debugging challenges where participants need to identify and fix errors in provided code snippets.</li>
-                <li>Selection Criteria: The highest scoring teams will proceed to the next round based on their performance in this round.</li>
+                <ul>
+                    <li>Format: Multiple Choice Questions (MCQs) and Debugging</li>
+                    <li>Description: In this round, participants will face a series of MCQs testing their conceptual understanding of programming languages, algorithms, and data structures. Additionally, there will be debugging challenges where participants need to identify and fix errors in provided code snippets.</li>
+                    <li>Selection Criteria: The highest scoring teams will proceed to the next round based on their performance in this round.</li>
+                </ul>
                 <h4>Round 2:</h4>
-                <li>Format: Coding Challenges on HackerRank</li>
-                <li>Description: The second round will consist of three coding challenges hosted on HackerRank platform. Participants must solve these challenges within the given time limit and pass all the test cases to qualify for consideration.</li>
-                <li>Prerequisite: Participants are required to create a HackerRank ID before the event to participate in this round.</li>
-                <li>Selection Criteria: The top three teams that successfully pass all the test cases within the stipulated time limit will be declared the winners of CODEJAM.</li>
+                <ul>
+                    <li>Format: Coding Challenges on HackerRank</li>
+                    <li>Description: The second round will consist of three coding challenges hosted on HackerRank platform. Participants must solve these challenges within the given time limit and pass all the test cases to qualify for consideration.</li>
+                    <li>Prerequisite: Participants are required to create a HackerRank ID before the event to participate in this round.</li>
+                    <li>Selection Criteria: The top three teams that successfully pass all the test cases within the stipulated time limit will be declared the winners of CODEJAM.</li>
+                </ul>
                 <h3>Additional Information:</h3>
-                <li>Participants must adhere to the event rules and guidelines provided by the organizers.</li>
-                <li>Fair play and integrity are expected from all participants throughout the competition.</li>
-                <li>Organizers reserve the right to disqualify any team found violating the rules or engaging in any form of misconduct.</li>
-                <li>All decisions made by the organizing committee regarding the event and its outcomes are final.</li>
-                <h3>Date: 26.04.24 | Time: 9.30 am</h3>
-                <h3>Venue: C303</h3>
-                <h3>Student Coordinators:</h3>
-                <p>Sathyasri.S - 9025504556</p>
-                <p>Gugapriya.A - 6374248015</p>
-            </ul>
-
+                <ul>
+                    <li>Participants must adhere to the event rules and guidelines provided by the organizers.</li>
+                    <li>Fair play and integrity are expected from all participants throughout the competition.</li>
+                    <li>Organizers reserve the right to disqualify any team found violating the rules or engaging in any form of misconduct.</li>
+                    <li>All decisions made by the organizing committee regarding the event and its outcomes are final.</li>
+                    <li>Date: 26.04.24 | Time: 9.30 am</li>
+                    <li>Student Coordinators:</li>
+                    <p>Sathyasri.S - 9025504556</p>
+                    <p>Gugapriya.A - 6374248015</p>
+                </ul>
             </div>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSeRCF6KmMiq7NbK07aqDes9g6t7B2KmVuorodXev4pktEGFsw/viewform?usp=sf_link" class="register-btn">Register</a>
         </div>
@@ -222,7 +224,6 @@
                     <li>Organizers reserve the right to disqualify any team found violating the rules or engaging in any form of misconduct.</li>
                     <li>All decisions made by the organizing committee regarding the event and its outcomes are final.</li>
                     <li>Date: 29.04.24 | Time: 2:00 PM</li>
-                    <li>Venue: [Insert Venue Details]</li>
                     <li>Student Coordinators:</li>
                     <p>Guru Dharsan - 6381474594</p>
                     <p>Tharun Kumar - 9994893511</p>
@@ -233,7 +234,7 @@
         <div class="event">
             <h2>Encrypt Expo</h2>
             <img src="cybersecurity.jpg" alt="Cybersecurity Symposium">
-            <p class="description">Explore the world of encryption, cybersecurity, and network security.</p>
+            <p class="description">Explore the world of encryption, cybersecurity, and network security. <a href="#" class="read-more">Read more</a></p>
             <div class="expanded-description">
                 <h3>Event Details:</h3>
                 <ul>
@@ -253,7 +254,7 @@
                 <p>Harishini.P - 9025673394</p>
             </div>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdg8yJpZz5KxwvJ42ngl3ZMJ3UV8cPqFk470iZChlP_btlQ_Q/viewform?usp=sf_link" class="register-btn">Register</a>
-        </div>        
+        </div>
         <div class="event">
             <h2>INNOVATIVE SHOWCASE(Project Expo)</h2>
             <img src="project-expo.jpg" alt="Project Expo">
@@ -270,8 +271,7 @@
                     <li>Mail your PPT to clarentzmcet@gmail.com before 24/4/2024</li>
                     <li>Based on the idea, the teams will be shortlisted for presentation.</li>
                 </ul>
-                <h3>Date: 26.04.24 | Time: 9.30 am</h3>
-                <h3>Venue: C303</h3>
+                <h3>Date: 29.04.24 | Time: 9.30 am</h3>
                 <h3>Student Coordinators:</h3>
                 <p>Krishika.R - 9385726369</p>
                 <p>Mohammed Yunus.S - 9677774097</p>
